# LLM-Knowledge

./: .gitignore  01 Transformer.md  02 Transformer_code.md  03 分布式并行.md  04 DeepSpeed Zero与显存消耗.md  10 KV Cache.md  100 A2A.md  101 RAG.md  103 Agent设计模式.md  104 docker.md  105 向量数据库.md  167 求职周计划⭐.md  168 面试基础知识⭐.md  169 个人项目.md  171 简历项目描述⭐.md  172 Agent应用岗位能力要求⭐.md  173 demo项目.md  96 claude code.md  97 Skills.md  98 opencode.md  KV Cache.md  pyproject.toml
2026/: 166 计划.md  170 TODO⭐.md  174 刷题.md  python数据结构.md
Excalidraw/: Drawing 2026-03-04 22.51.48.excalidraw.md  Drawing 2026-03-06 14.43.08.excalidraw.md
code/: transformer.py
code/transformer/: inference_batch_beam.py  inference_demo.py  transformer.py
